--- a/websocket-send-time.html
+++ b/websocket-send-time.html
@@ -6,7 +6,13 @@
     <script src="https://unpkg.com/reconnecting-websocket@4.4.0/dist/reconnecting-websocket-iife.min.js"></script>
     <script src="/lib/websocket.js"></script>
     <script src="/lib/utils.js"></script>
-
+    <style>
+      body {
+        font-family: sans-serif;
+        margin: 0;
+        padding: 24px;
+      }
+    </style>
     <script>
       let time = 0,
         ticker = 0;
@@ -56,6 +62,9 @@
         document.querySelector("#audio").pause();
         document.querySelector("#audio").currentTime = 0;
 
+        document.querySelector("#timeLabel").innerHTML = "0";
+        document.querySelector("#timeLabel2").innerHTML = "00:00";
+
         if (ticker > 0) {
           clearInterval(ticker);
         }
@@ -67,11 +76,11 @@
   </head>
   <body>
     <h2>Timetrip - Send time</h2>
-    Start time from: <input id="minutes" type="text" size="1" value="00" /> :
-    <input id="seconds" type="text" size="1" value="00" />
+    Start time from: <input id="minutes" type="text" size="2" value="00" /> :
+    <input id="seconds" type="text" size="2" value="00" />
+    <br />
     <br />
     Send frequency (ms)
-    <br />
     <input id="frequency" type="text" size="4" value="1000" />
     <br />
     <br />
@@ -79,10 +88,8 @@
     <button id="stopButton" onclick="stopClock()">Stop</button>
     <br />
     <br />
-    Time (sec) <label id="timeLabel"></label>
-    <br />
-    Time (sec)
-    <label id="timeLabel2"></label>
+    <h1 id="timeLabel2">00:00</h1>
+    Sec: <span id="timeLabel">0</span>
     <br />
     <br />
     Websocket status:<label id="status">unknown</label>
